--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,7 +124,7 @@ services:
       #   - "--log.level=debug"
 
   grafana:
-    image: "grafana/grafana"
+    image: "grafana/grafana:10.1.0"
     hostname: grafana
     container_name: grafana
     environment:
